tests/paczka1/small_fuzzy/95962453.err
Error in line 9: TmuoiROJK S256 94,7
Error in line 8: eK2bX4fS S799 88,2
Error in line 11: TmuoiROJK S271 44,4
